Add configuration to surefire plugin
Added new configuration to surefire to prevent possible issue with JavaFX and ControlsFX.