@@ -118,6 +118,7 @@
                 <version>3.2.1</version>
                 <configuration>
                     <argLine>--illegal-access=permit</argLine>
+                    <argLine>--add-opens javafx.base/com.sun.javafx.event=org.controlsfx.controls</argLine>
                 </configuration>
             </plugin>
         </plugins>
